--- a/css/styles.css
+++ b/css/styles.css
@@ -537,6 +537,29 @@ width: 270px;
     margin-bottom: 50px;
 }
 
+.about-job {
+position: relative;
+}
+
+.about-title {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    background-color: rgba(47, 48, 58, 0.8);
+
+    padding-top: 27px;
+    padding-bottom: 27px;
+
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+
 .subscribe {
 padding-top: 30px;
 padding-bottom: 30px;
