--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,10 @@
     --items: 3;
     --margins:30px;
      
+--anim: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
+
 }
 
 
@@ -161,6 +165,7 @@ img {
     letter-spacing: 0.03em;
     background-color: var(--whitness-bg-color);
     cursor: pointer;
+    transition: color var(--anim), background-color var(--anim), box-shadow var(--anim) ;
 }
 
 .button:hover,
@@ -213,7 +218,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
     text-decoration: none;
     padding-top: 32px;
     padding-bottom: 32px;
-   
+    transition: color var(--anim);
     
 }
 
@@ -231,7 +236,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
     letter-spacing: 0.02em;
     line-height: 1.14;
     text-decoration: none;
-
+    transition: color var(--anim);
 }
 
 
@@ -282,7 +287,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
     text-decoration: none;
     margin-left: 0;;
     list-style: none;
-    
+    transition: color var(--anim);
     
    
 }
@@ -291,14 +296,15 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
     fill:var(--grayeness-fill-color);
     margin-right: 10px;
     margin-bottom: -2px;
+    transition: color var(--anim), fill var(--anim);
 }
 
 .tel {
    
-fill: var(--grayeness-fill-color);
+    fill: var(--grayeness-fill-color);
     margin-right: 10px;
     margin-bottom: -2px;
-
+    transition: color var(--anim), fill var(--anim);
     
 }
 
@@ -620,6 +626,7 @@ margin-bottom: 10px;
     width: 44px;
     height: 44px;
     border-radius: 50%;
+    transition: color var(--anim), background-color var(--anim);
 }
 
 .social-media-bg:hover,
@@ -635,9 +642,7 @@ margin-bottom: 10px;
         width: 44px;
         height: 44px;
         border-radius: 50%;
-                
-    
-  
+        transition: color var(--anim), background-color var(--anim);
 }
 
 
@@ -701,7 +706,7 @@ border-radius: 4px;
 text-align: center;
 justify-content: center;
 align-items: center;
-
+transition: color var(--anim), border-color var(--anim);
 
 }
 
@@ -709,6 +714,7 @@ align-items: center;
     fill: var(--gray-fill-color) ;
     width: 106px;
     height: 60px;
+    transition: color var(--anim), fill var(--anim);
 }
 
 .clients-icon:hover, 
@@ -754,7 +760,7 @@ margin-right: 30px;
 .portfolio-bg
 {  
     background-color: var(--white-bg-color);
-   
+    transition: color var(--anim), background-color var(--anim), box-shadow var(--anim);
 }
 
 .portfolio-bg:hover,
