--- a/css/styles.css
+++ b/css/styles.css
@@ -271,10 +271,25 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
 
 
 .current {
+    position: relative;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--blue-txt-color);
+}
+
+
+.current::before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 4px;
+    bottom: 0;
+    left: 0;
+    display: inline-block;
+    background-color: var(--blue-bg-color);
+    border-radius: 2px;
+
 }
 
 .address-style
