--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,8 @@ img {
 .card-set-item {
     flex-basis: calc((100% - var(--margins) * var(--items)) / var(--items));
     margin: calc(var(--margins) / 2);
-    
+    position: relative;
+        overflow: hidden;
 }
 
 /*сітка на флексах фініш*/
@@ -279,7 +280,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
 }
 
 
-.current::before {
+.current::after {
     position: absolute;
     content: "";
     width: 100%;
@@ -774,8 +775,9 @@ margin-right: 30px;
 
 .portfolio-bg
 {  
-    background-color: var(--white-bg-color);
+       background-color: var(--white-bg-color);       
     transition: color var(--anim), background-color var(--anim), box-shadow var(--anim);
+   
 }
 
 .portfolio-bg:hover,
@@ -785,14 +787,43 @@ margin-right: 30px;
 
 }
 
+.portfolio-overlay {
+position: absolute;
+bottom: 0;
+left: 0;
+display: flex; 
+transform: translateY(100%);
+justify-content: center;
+align-items: center;
+background-color: rgba(33, 150, 243, 0.9);
+padding: 63px 24px;
+transition: transform var(--anim);
+width: 100%;
+height: 100%;
+
+
+} 
+
+.portfolio-overlay-text {
+
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color: var(--white-txt-color);
+}
+
+.card-set-item:hover .portfolio-overlay {
+transform: translateY(0%);
+
+
+}
 .border 
 {
 border-left: 1px solid #EEEEEE;
 border-right: 1px solid #EEEEEE;
 border-bottom: 1px solid #EEEEEE;
 padding: 20px 24px;
-
-
 
 }
 
@@ -840,3 +871,51 @@ margin-left: 8px;
    
 }
 
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /*background-color: var(--white-bg-color);*/
+    border: 1px solid rgba(0, 0, 0, 0.1);
+   opacity: 1;
+   visibility: visible;
+   pointer-events: initial;
+   transition: opacity var(--anim), visibility var(--anim);
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 528px;
+    height: 581px;
+    background-color: var(--white-bg-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+
+.modal-close {
+    position: absolute;
+    top: 0;
+    right: 0;transform: translate(-8px, 8px);
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    background-color: var(--white-bg-color);
+  
+}
+
+.backdrop .is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
