--- a/css/styles.css
+++ b/css/styles.css
@@ -884,6 +884,7 @@ margin-left: 8px;
     visibility: visible;
     pointer-events: initial;
     transition: opacity var(--anim), visibility var(--anim);
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 .modal {
